fp-library/tests/ui/tuple2_no_inferable_brand.stderr
error[E0277]: `(i32, i32)` does not have a unique brand and cannot use brand inference
 --> tests/ui/tuple2_no_inferable_brand.rs:9:30
  |
9 |     let _ = map(|x: i32| x + 1, (1i32, 2i32));
  |             ---                 ^^^^^^^^^^^^ the trait `InferableBrand_cdc7cd43dac7585f` is not implemented for `(i32, i32)`
  |             |
  |             required by a bound introduced by this call
  |
  = note: use the `explicit::` variant with a turbofish to specify the brand manually
help: the trait `InferableBrand_cdc7cd43dac7585f` is implemented for `(A,)`
 --> src/types/tuple_1.rs
  |
  | /     impl_kind! {
  | |         for Tuple1Brand {
  | |             type Of<'a, A: 'a>: 'a = (A,);
  | |         }
  | |     }
  | |_____^
note: required by a bound in `fp_library::functions::map`
 --> src/functions/functor.rs
  |
  |     pub fn map<'a, FA, A: 'a, B: 'a, Marker>(
  |            --- required by a bound in this function
...
  |         FA: InferableBrand_cdc7cd43dac7585f, {
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `map`
  = note: this error originates in the macro `impl_kind` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use a unary tuple instead
  |
9 |     let _ = map(|x: i32| x + 1, ((1i32, 2i32),));
  |                                 +            ++

error[E0277]: `(i32, i32)` does not have a unique brand and cannot use brand inference
 --> tests/ui/tuple2_no_inferable_brand.rs:9:10
  |
9 |     let _ = map(|x: i32| x + 1, (1i32, 2i32));
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `InferableBrand_cdc7cd43dac7585f` is not implemented for `(i32, i32)`
  |
  = note: use the `explicit::` variant with a turbofish to specify the brand manually
help: the trait `InferableBrand_cdc7cd43dac7585f` is implemented for `(A,)`
 --> src/types/tuple_1.rs
  |
  | /     impl_kind! {
  | |         for Tuple1Brand {
  | |             type Of<'a, A: 'a>: 'a = (A,);
  | |         }
  | |     }
  | |_____^
  = note: this error originates in the macro `impl_kind` (in Nightly builds, run with -Z macro-backtrace for more info)
